@@ -192,6 +192,7 @@ enum {
 	ESLURM_PARTITION_DOWN,
 	ESLURM_DUPLICATE_GRES,
 	ESLURM_JOB_SETTING_DB_INX,
+	ESLURM_RSV_ALREADY_STARTED,
 
 	/* switch specific error codes, specific values defined in plugin module */
 	ESLURM_SWITCH_MIN = 3000,
